local-k8s/k8s/myapp/templates/test.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: react-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-frontend
  template:
    imagePullSecrets:
      - name: ecr-secret
    containers:
      - name: react-frontend
        image: react-frontend:latest
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: react-frontend
spec:
  type: NodePort
  selector:
    app: react-frontend
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
---
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: fullname-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fullname-api
  template:
    imagePullSecrets:
      - name: ecr-secret
    containers:
      - name: fullname-api
        image: fullname-api:latest
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: fullname-api
spec:
  selector:
    app: fullname-api
  ports:
    - port: 3000
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:7
          ports:
            - containerPort: 6379

---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
---
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:7
          args:
            - "--auth"
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-storage
              mountPath: /data/db
            - name: mongo-init
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: mongo-storage
          persistentVolumeClaim:
            claimName: mongodb-pvc
        - name: mongo-init
            configMap:
              name: mongodb-init-script
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
spec:
  selector:
    app: mongodb
  ports:
    - port: 27017
      targetPort: 27017
